@@ -16,6 +16,7 @@
 == Content ==
 * Add "wingsOff" action
 * Add "sprintStarting" action
+* Add "explosion" action
 * Add "blockStanding" activator
 * "health" action can scale amount with distance between source and target
 * "particleGun" attack has configurable range
